# plugin_study

./: CMakeLists.txt  README.md  package.xml  plugins.xml
include/plugin_study/: base_study_plugin.hpp  error_plugin.hpp  info_plugin.hpp  warn_plugin.hpp
plugins/: error_plugin.cpp  info_plugin.cpp  warn_plugin.cpp
src/: main.cpp
