<?xml version="1.0"?>
<package format="2">
  <name>plugin_study</name>
  <version>0.0.0</version>
  <description>The plugin_study package</description>
  <maintainer email="ladianchad@todo.todo">ladianchad</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  <plugin_study plugin="${prefix}/plugins.xml"/>
  </export>
</package>


